--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,10 +18,21 @@
 						<%= link_to user_path(@book.user) do %>
 							<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
 						<%= @book.user.name %>
-						
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
+							<td><% if @book.favorited_by?(current_user) %>
+							<%= link_to book_favorites_path(@book), method: :delete do %>
+								<i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
+								<%= @book.favorites.count %>
+							<% end %>
+						<% else %>
+							<%= link_to book_favorites_path(@book), method: :post do %>
+								<i class="glyphicon glyphicon-heart-empty" aria-hidden="true" ></i>
+								<%= @book.favorites.count %>
+							<% end %>
+						<% end %>
+					</td>
 					<% if @user == current_user %>
 					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
