--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,7 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
-							<td><% if @book.favorited_by?(current_user) %>
+					<td><% if @book.favorited_by?(current_user) %>
 							<%= link_to book_favorites_path(@book), method: :delete do %>
 								<i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
 								<%= @book.favorites.count %>
@@ -33,13 +33,19 @@
 							<% end %>
 						<% end %>
 					</td>
-					<% if @user == current_user %>
-					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-					<% end %>
+						<% if @user == current_user %>
+						<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+						<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+						<% end %>
 					<% end %>
 				</tr>
 			</table>
+					<!--<comment form>-->
+						<%= form_for [@book, @book_comment] do |comment| %>
+						<%= comment.text_area :comment, rows:'5', class: "form-control" %>
+						<%= comment.submit "送信" %>
+						<% end %>
+						<!--</comment form>-->
 	</div>
 </div>
 
