--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,6 +33,7 @@
 							<% end %>
 						<% end %>
 					</td>
+					<td><%= link_to "コメント数#{@book.book_comments.count}", book_path(@book) %></td>
 						<% if @user == current_user %>
 						<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 						<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
@@ -40,12 +41,27 @@
 					<% end %>
 				</tr>
 			</table>
+					<!--<commentの表示>-->
+			<table class="table">
+				<tr>
+					<% @book.book_comments.each do |book_comment| %>
+					<td><%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %></td><br>
+					<td><%= @book.user.name %></td>
+					<td><%= book_comment.comment %></td>
+						<% if book_comment.user == current_user %>
+					<td><%= link_to "Destroy", book_book_comments_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger" %></td>
+						<% end %>
+						<br>
+				</tr>
+						<% end %>
+			</table>
+					<!--</commentの表示>-->
 					<!--<comment form>-->
 						<%= form_for [@book, @book_comment] do |comment| %>
 						<%= comment.text_area :comment, rows:'5', class: "form-control" %>
 						<%= comment.submit "送信" %>
 						<% end %>
-						<!--</comment form>-->
-	</div>
+					<!--</comment form>-->
+		</div>
 </div>
 
