--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -51,6 +51,7 @@
 							<% end %>
 						<% end %>
 					</td>
+					<td><%= link_to "コメント数#{book.book_comments.count}", book_path(book) %></td>
 				</tr>
 				<% end %>
 			</tbody>
