--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
 		<tr>
 			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 			<td><%= user.name %></td>
-			<td><%= "フォロー数: #{user.follower.count}" %></td>
+			<td><%= "フォロー数: #{user.following.count}" %></td>
 			<td><%= "フォロワー数: #{user.followed.count}" %></td>
 			<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
 		</tr>
