--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,6 +27,11 @@
 			<td><%= user.name %></td>
 			<td><%= "フォロー数: #{user.following.count}" %></td>
 			<td><%= "フォロワー数: #{user.followed.count}" %></td>
+ 			<td><% if current_user.following?(user) %>
+        			<%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+      			<% else %>
+        			<%= link_to 'フォローする', follow_path(user.id), method: :POST %>
+      			<% end %>
 			<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
 		</tr>
 		<% end %>
