--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -10,6 +10,16 @@
 		<th>introduction</th>
 		<th><%= user.introduction %></th>
 	</tr>
+	<tr>
+		<th>follows</th>
+		<th><%= user.following.count %></th>
+	</tr>
+
+	<tr>
+		<th>followers</th>
+		<th><%= user.followed.count %></th>
+	</tr>
+
 </table>
 
 <div class="row">
