--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -12,12 +12,12 @@
 	</tr>
 	<tr>
 		<th>follows</th>
-		<th><%= user.following.count %></th>
+		<th><%= link_to "#{user.following.count}", user_following_path(user) %></th>
 	</tr>
 
 	<tr>
 		<th>followers</th>
-		<th><%= user.followed.count %></th>
+		<th><%= link_to "#{user.followed.count}", user_follower_path(user)  %></th>
 	</tr>
 
 </table>
