--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,9 +29,9 @@
 			<td><%= "フォロワー数: #{user.followed.count}" %></td>
  			<td><% unless user == current_user %>
  					<% if current_user.following?(user) %>
-        				<%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+        				<%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete %>
       				<% else %>
-        				<%= link_to 'フォローする', follow_path(user.id), method: :POST %>
+        				<%= link_to 'フォローする', user_relationships_path(user.id), method: :POST %>
       				<% end %>
       			<% end %></td>
 			<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
