--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,13 @@
 	<div class="col-xs-3">
 		<h2>User info</h2>
 		<%= render 'users/profile', user: @user %>
-
+		<% unless @user == current_user %>
+			<% if current_user.following?(@user) %>
+				<br><%= link_to 'フォロー外す', user_relationships_path(@user), class: "btn btn-primary", method: :delete %>
+			<% else %>
+				<br><%= link_to 'フォローする', user_relationships_path(@user), class: "btn btn-success", method: :POST %>
+			<% end %>
+		<% end %>
 		<h2>New book</h2>
 		<%= render 'books/newform', book: Book.new %>
 	</div>
