--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <header>
+      <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
 
         <nav class="nav navbar-nav navbar-left">
@@ -32,19 +33,22 @@
             <% end %>
           </ul>
         </nav>
+      </div>
+    </div>
             <!-- 検索 -->
           <% if user_signed_in? %>
-            <div class="serach-form">
-              <%= form_tag(sarch_path, method::get) do %>
-              <%= text_field_tag 'search[content' %>
+          <div class="text-center">
+            <div class="search-form">
+              <%= form_tag(search_path, method: :get) do %>
+              <%= text_field_tag 'search[content]' %>
               <%= select_tag 'search[model]', options_for_select({"User"=>"user", "Book"=>"book"}) %>
-              <%= select_tag 'search[how]', options_for_select({"完全一致"=>"match", "前方一致"=>"forward","後方一致"=>"backward","部分一致"=>"partial"}) %>
+              <%= select_tag 'search[how]', options_for_select({"完全一致"=>"match", "前方一致"=>"forward","後方一致"=>"backward","部分一致"=>"partical"}) %>
               <%= submit_tag'検索', class:"btn btn-primary" %>
               <% end %>
             </div>
+          </div>
           <% end %>
            <!-- /検索 -->
-      </div>
     </header>
 
     <div class="container">
