--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,2 +1,51 @@
-<h1>Search#search</h1>
-<p>Find me in app/views/search/search.html.erb</p>
+<div class="container">
+<%if @model == 'user' %>
+<!--user検索結果 -->
+	<h1>Users search for '<%= @content %>'</h1>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>image</th>
+				<th>name</th>
+				<th colspan="3"></th>
+			</tr>
+		</thead>
+	<tbody>
+		<% @users.each do |user| %>
+		<tr>
+			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
+			<td><%= user.name %></td>
+			<td><%= "フォロー数: #{user.following.count}" %></td>
+			<td><%= "フォロワー数: #{user.followed.count}" %></td>
+		<% end %>
+	</tbody>
+	</table>
+<!--/user検索結果 -->
+<!--book検索結果 -->
+<% elsif @model == 'book' %>
+	<h1>Books search for '<%= @content %>'</h1>
+	<table class="table">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Title</th>
+					<th>Opinion</th>
+					<th colspan="3"></th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<% @books.each do |book| %>
+				<tr>
+					<td>
+						<%= link_to user_path(book.user) do %>
+							<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+						<% end %>
+					</td>
+					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
+					<td><%= book.body %></td>
+				<% end %>
+			</tbody>
+	</table>
+<!--/book検索結果 -->
+<% end %>
