--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,33 +28,9 @@
 					<th colspan="3"></th>
 				</tr>
 			</thead>
-
-			<tbody>
-				<% @books.each do |book| %>
-				<tr>
-					<td>
-						<%= link_to user_path(book.user) do %>
-							<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-						<% end %>
-					</td>
-					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
-					<td><%= book.body %></td>
-					<td><% if book.favorited_by?(current_user) %>
-							<%= link_to book_favorites_path(book), method: :delete do %>
-								<i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
-								<%= book.favorites.count %>
-							<% end %>
-						<% else %>
-							<%= link_to book_favorites_path(book), method: :post do %>
-								<i class="glyphicon glyphicon-heart-empty" aria-hidden="true" ></i>
-								<%= book.favorites.count %>
-							<% end %>
-						<% end %>
-					</td>
-					<td><%= link_to "コメント数#{book.book_comments.count}", book_path(book) %></td>
-				</tr>
-				<% end %>
-			</tbody>
+		 <tbody id="book_index" >
+		 	<%= render 'books/book' %>
+		 </tbody>
 		</table>
 
 		<!--books一覧 -->
