--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,21 +43,13 @@
 			</table>
 					<!--<commentの表示>-->
 			<table class="table">
-				<tr>
-					<% @book.book_comments.each do |book_comment| %>
-					<td><%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %></td><br>
-					<td><%= @book.user.name %></td>
-					<td><%= book_comment.comment %></td>
-						<% if book_comment.user == current_user %>
-					<td><%= link_to "Destroy", book_book_comments_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger" %></td>
-						<% end %>
-						<br>
-				</tr>
-						<% end %>
+				<tbody class="book_comments">
+					<%= render 'books/comment' %>
+				</tbody>
 			</table>
 					<!--</commentの表示>-->
 					<!--<comment form>-->
-						<%= form_for [@book, @book_comment] do |comment| %>
+						<%= form_with model: [@book, @book_comment] do |comment| %>
 						<%= comment.text_area :comment, rows:'5', class: "form-control" %>
 						<%= comment.submit "送信" %>
 						<% end %>
