--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,1 +1,2 @@
-$('#book_comments').html("<%= j(render partial: 'books/comment', locals: {book: @book}) %>");
+$('#book_comments').html("<%= j(render partial: 'books/comment', locals: {book: @book}) %>")
+$('.form-control').val('')
