--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,7 +43,7 @@
 			</table>
 					<!--<commentの表示>-->
 			<table class="table">
-				<tbody class="book_comments">
+				<tbody id="book_comments">
 					<%= render 'books/comment' %>
 				</tbody>
 			</table>
