--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#book_comments').html("<%= j(render partial: 'books/comment', locals: {book: @book}) %>");
+$('#book_comments').html("<%= j(render partial: 'books/comment', locals: {book: @book}) %>")
